Fix: single editor doesn't stretch to full height

--- a/edit/edit.css
+++ b/edit/edit.css
@@ -770,6 +770,10 @@ html:not(.usercss) .usercss-only,
   color: #888;
 }
 
+#sections .single-editor {
+  height: 100%;
+}
+
 #sections .single-editor,
 #sections > .single-editor:first-child {
   margin: 0;
